update html and css

--- a/resources/osi/gui/index.html
+++ b/resources/osi/gui/index.html
@@ -36,20 +36,8 @@
       <div class = "bank_label">OSI</div>
       <div class = "bank_id">001</div>
     </div>
-    <div class = "char_id overlay white" >
-      <div class = "given_name">Norman</div>
-      <div class = "surname">BONES</div>
-      <div class = "occupation_label">OCCUPATION</div>
-      <div class = "occupation">Private Investigator</div>
-      <div class = "sex_label">SEX</div>
-      <div class = "sex">Male</div>
-      <div class = "dob_label">DOB</div>
-      <div class = "dob">1983 MAY 22</div>
-      <div class = "expiration_label">ISSUE DATE / EXP DATE</div>
-      <div class = "expiration">2018 FEB 27 / 2023 FEB 27</div>
-      <div class = "bank_desc">BANK SER NO</div>
-      <div class = "bank_label">OSI</div>
-      <div class = "bank_id">5F2</div>
+    <div class = "char_id overlay white">
+      <div class = "new_character">+</div>
     </div>
   </body>
 </html>
