--- a/resources/osi/gui/index.html
+++ b/resources/osi/gui/index.html
@@ -26,7 +26,7 @@
       <div class = "given_name">Gary</div>
       <div class = "surname">BUSEY</div>
       <div class = "occupation_label">OCCUPATION</div>
-      <div class = "occupation">Software Engineer</div>
+      <div class = "occupation">Taxi Driver</div>
       <div class = "sex_label">SEX</div>
       <div class = "sex">Male</div>
       <div class = "dob_label">DOB</div>
