--- a/resources/osi/gui/index.html
+++ b/resources/osi/gui/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-    <script src="stat_actions.js" type="text/javascript"></script>
-    <script src="selection_actions.js" type="text/javascript"></script>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="scripts/attributes.js" type="text/javascript"></script>
+    <script src="scripts/selection.js" type="text/javascript"></script>
+    <link href="stylesheets/selection.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/application.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/information.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/common.css" rel="stylesheet" type="text/css" />
   </head>
   <body style="background-color:#000000;">
     <div style="display:none;" class = "char_id overlay" >
@@ -131,7 +134,7 @@
         </fieldset>
         <br>
         <fieldset>
-        <legend>STATS</legend>
+        <legend>ATTRIBUTES</legend>
         <label>STRENGTH</label>
         <div>11</div>
         <br>
