--- a/resources/osi/gui/index.html
+++ b/resources/osi/gui/index.html
@@ -4,13 +4,15 @@
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
     <script src="scripts/attributes.js" type="text/javascript"></script>
     <script src="scripts/selection.js" type="text/javascript"></script>
+    <script src="scripts/templates.js" type="text/javascript"></script>
+    <script src="scripts/main.js" type="text/javascript"></script>
     <link href="stylesheets/selection.css" rel="stylesheet" type="text/css" />
     <link href="stylesheets/application.css" rel="stylesheet" type="text/css" />
     <link href="stylesheets/information.css" rel="stylesheet" type="text/css" />
     <link href="stylesheets/common.css" rel="stylesheet" type="text/css" />
   </head>
   <body style="background-color:#000000;">
-    <div style="display:none;" class = "char_id overlay" >
+    <!--div style="display:none;" class = "char_id overlay" >
       <div class = "given_name">Geoffrey</div>
       <div class = "surname">WILLIAMS</div>
       <div class = "occupation_label">OCCUPATION</div>
@@ -101,10 +103,7 @@
         <button type="button" onclick="decInt()">-</button>
         <label id="int">0</label>
         <button type="button" onclick="incInt()">+</button>
-        </div>
-        <br>
-        <br>
-        <br>
+        </div><br><br><br>
         <i>Strength affects melee damage and resistance</i>
         <br>
         <i>Dexterity affects run speed, stamina and jump height</i>
@@ -159,6 +158,6 @@
       </div>
       <button style="position:absolute;top:530px;left:45px;" class="delete_button" >DELETE</button>
       <button style="position:absolute;top:530px;left:295px;" class="confirm_button" >PLAY</button>
-    </div>
+    </div-->
   </body>
 </html>
