--- a/resources/osi/gui/index.html
+++ b/resources/osi/gui/index.html
@@ -11,7 +11,7 @@
     <link href="stylesheets/information.css" rel="stylesheet" type="text/css" />
     <link href="stylesheets/common.css" rel="stylesheet" type="text/css" />
   </head>
-  <body style="background-color:#000000;">
+  <body>
     <!--div style="display:none;" class = "char_id overlay" >
       <div class = "given_name">Geoffrey</div>
       <div class = "surname">WILLIAMS</div>
