--- a/resources/osi/gui/index.html
+++ b/resources/osi/gui/index.html
@@ -4,6 +4,7 @@
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
     <script src="scripts/attributes.js" type="text/javascript"></script>
     <script src="scripts/selection.js" type="text/javascript"></script>
+    <script src="scripts/context_menu.js" type="text/javascript"></script>
     <script src="scripts/templates.js" type="text/javascript"></script>
     <script src="scripts/main.js" type="text/javascript"></script>
     <link href="stylesheets/selection.css" rel="stylesheet" type="text/css" />
